--- a/elibrary-controller/src/main/resources/templates/admin/usersList.html
+++ b/elibrary-controller/src/main/resources/templates/admin/usersList.html
@@ -28,7 +28,7 @@
 
 <div class="container-xxl my-md-4 bd-layout">
     <aside class="bd-sidebar">
-        <nav class="collapse" id="bd-docs-nav" aria-label="Docs navigation">
+        <nav id="bd-docs-nav" aria-label="Docs navigation">
             <form class="input-group mt-3" action="#" th:action="@{/admin/users}" th:method="get">
                 <input type="text" name="userId" class="form-control"
                        placeholder="User ID" aria-label="User library card number"
